# AWDIT

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  REPRODUCE.md  benchmark.xml  build.rs  make-tarball.sh
docker/: Dockerfile  init-runexec.sh
results/: fig7-rubis-expected.csv  fig7-tpcc-expected.csv  fig7-twitter-expected.csv  fig8-cc-expected.csv  fig8-ra-expected.csv  fig8-rc-expected.csv  small-expected.csv  tab1-expected.csv
results/experiment1/: 2024-11-06-cockroachdb-rubis-cc-s50-time.csv  2024-11-06-cockroachdb-rubis-ra-s50-time.csv  2024-11-06-cockroachdb-rubis-rc-s50-time.csv  2024-11-06-cockroachdb-tpcc-cc-s100-mem.csv  2024-11-06-cockroachdb-tpcc-cc-s100-time.csv  2024-11-06-cockroachdb-tpcc-ra-s100-time.csv  2024-11-06-cockroachdb-tpcc-ra-s50-mem.csv  2024-11-06-cockroachdb-tpcc-ra-s50-time.csv  2024-11-06-cockroachdb-tpcc-rc-s100-time.csv  2024-11-06-cockroachdb-tpcc-rc-s50-time.csv  2024-11-06-cockroachdb-tpcc-s100-stats.csv  2024-11-06-cockroachdb-tpcc-s50-stats.csv  2024-11-06-cockroachdb-twitter-cc-s100-time.csv  2024-11-06-cockroachdb-twitter-ra-s50-time.csv  2024-11-06-cockroachdb-twitter-rc-s50-time.csv  2024-11-06-cockroachdb-twitter-s100-stats.csv  2024-11-06-cockroachdb-twitter-s50-stats.csv  2024-11-06-postgres-rubis-cc-s100-time.csv  2024-11-06-postgres-rubis-ra-s100-time.csv  2024-11-06-postgres-rubis-ra-s50-time.csv  2024-11-06-postgres-rubis-s100-stats.csv  2024-11-06-postgres-tpcc-cc-s100-time.csv  2024-11-06-postgres-tpcc-cc-s50-mem.csv  2024-11-06-postgres-tpcc-cc-s50-time.csv  2024-11-06-postgres-tpcc-ra-s100-res.csv  2024-11-06-postgres-tpcc-ra-s100-time.csv  2024-11-06-postgres-tpcc-ra-s50-res.csv  2024-11-06-postgres-tpcc-rc-s100-time.csv  2024-11-06-postgres-tpcc-rc-s50-res.csv  2024-11-06-postgres-tpcc-rc-s50-time.csv  2024-11-06-postgres-tpcc-s100-stats.csv  (+28 more)
scripts/: convert-benches.py  create-scatterplots.py  extract-columns.py  fix-headers.py  history-stats.py  plot-results.sh  replace-columns.py  reproduce-all.sh  reproduce-fig7.sh  reproduce-fig8.sh  reproduce-fig9.sh  reproduce-tab1.sh  run-benches.py  sort-table.py  split-rows.py  test-run.sh
src/: checker.rs  formats.rs  lib.rs  main.rs  partial_order.rs  util.rs  vector_clock.rs
(+705 files in other folders)
