[package]
name = "consistency"
version = "0.1.0"
edition = "2021"

[features]
default = ["dbcop"]
dbcop = ["dep:dbcop", "dep:bincode", "dep:chrono"]

[dependencies]
rustc-hash = "2.0"
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
itertools = "0.13"
either = "1.13"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.11"
smallvec = "1.13"
dbcop = { git = "https://github.com/lassemoldrup/dbcop.git", branch = "lassemoldrup", optional = true }
bincode = { version = "1.3", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
test-generator = "0.3"

[build-dependencies]
build-deps = "0.1"
