[package]
name = "awdit"
version = "0.2.1"
edition = "2024"

[features]
dbcop = ["dep:dbcop", "dep:bincode", "dep:chrono"]

[dependencies]
rustc-hash = "2.1"
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5"
itertools = "0.14"
either = "1.15"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.11"
smallvec = "1.14"
dbcop = { path = "tools/dbcop", optional = true }
bincode = { version = "1.3", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-generator = "0.3"

[build-dependencies]
build-deps = "0.1"
